tests/ui/type-alias-impl-trait/issue-74244.stderr
error[E0207]: the type parameter `T` is not constrained by the impl trait, self type, or predicates
  --> $DIR/issue-74244.rs:9:6
   |
LL | impl<T> Allocator for DefaultAllocator {
   |      ^ unconstrained type parameter
   |
help: Either remove the type parameter 'T' or make use of it, for example ` for S<T>`.
   |
LL - impl<T> Allocator for DefaultAllocator {
LL + impl<> Allocator for DefaultAllocator {
   |

error: aborting due to previous error

For more information about this error, try `rustc --explain E0207`.
